<resources>
    <string name="app_name">ThatWillDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_task">Task</string>
    <string name="title_task">Title</string>
    <string name="description_task">Description</string>
    <string name="timer_task">Timer</string>

    <string name="time_task">00:00</string>
    <string name="time_format">%1$d:%2$d</string>
    <string name="category_normal_task">Normal</string>
    <string name="category_important_task">Important</string>
    <string name="date_task">00/00/0000</string>
    <string name="save_task">Save</string>
    <string name="title_task_row">Title Task</string>
</resources>