<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.task.TaskFragment">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/title_task"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_description"
        android:inputType="text"
        android:labelFor="@id/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/description_task"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_description"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:labelFor="@id/text_view_description"
        android:maxLines="7"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_description" />

    <TextView
        android:id="@+id/text_view_time_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:text="@string/time_task"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_date_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />

    <RadioGroup
        android:id="@+id/radio_group_category_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="@+id/text_view_time_task"
        app:layout_constraintTop_toBottomOf="@+id/text_view_time_task">

        <RadioButton
            android:id="@+id/radio_button_category_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/category_normal_task" />

        <RadioButton
            android:id="@+id/radio_button_category_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_important_task"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_view_date_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_task"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_time_task"
        app:layout_constraintTop_toTopOf="@+id/text_view_time_task" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:textSize="24sp"
        android:background="@drawable/button_border_save_task"
        app:layout_constraintBottom_toBottomOf="@+id/radio_group_category_task"
        app:layout_constraintTop_toTopOf="@+id/radio_group_category_task"
        app:layout_constraintStart_toEndOf="@+id/radio_group_category_task"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>