<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/border_description"
    android:padding="6dp">

    <TextView
        android:id="@+id/text_view_title_task_row"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/title_task_row"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/text_view_description_task_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_category_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/category_normal_task"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title_task_row" />

    <TextView
        android:id="@+id/text_view_description_task_row"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_view_date_task_row"
        app:layout_constraintStart_toEndOf="@+id/text_view_title_task_row"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_date_task_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_task"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_description_task_row"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_time_task_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/time_task"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date_task_row" />

</androidx.constraintlayout.widget.ConstraintLayout>